--- a/estilo.css
+++ b/estilo.css
@@ -1,23 +1,52 @@
 body {
-    background-color: rgb(20, 233, 84);
+   
 }
 
 img {
     width: 100%;
 }
 
+.principal {
+    background: #CCCCCC;
+    padding: 30px;
+}
+
 h1 {
     text-align: center;
 }
 
-p{
-text-align: center;
+p {
+    text-align: center;
 }
 
-em strong{
+em strong {
     color: red;
 }
 
-#missao{
-     font-size: 20px;
+#missao {
+    font-size: 20px;
+}
+
+.beneficios {
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.itens {
+    font-style: italic;
+}
+
+.imagembeneficios {
+    width: 50%;
 }
