--- a/produtos.css
+++ b/produtos.css
@@ -1,6 +1,6 @@
 header {
     background: #BBBBBB;
-    padding: 20PX 0;
+    padding: 20px 0;
 }
 
 .caixa {
@@ -13,58 +13,74 @@ nav {
     position: absolute;
     top: 110px;
     right: 0;
+}
 
-
+nav li {
     display: inline;
-    max-width: 0 0 0 15px;
+    margin: 0 0 0 15px;
 }
 
 nav a {
     text-transform: uppercase;
-    color: rgb(0, 0, 253);
+    color: #000000;
     font-weight: bold;
     font-size: 22px;
     text-decoration: none;
-
-
-
-
 }
 
-
-
-
-
-
-
-
+nav a:hover {
+    color: #c78c19;
+    text-decoration: underline;
+}
 
 .produtos {
     width: 940px;
-    margin: 50px 0;
-    padi
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
-
-
-
-
-
-
-
-
-
-
-
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 3px solid #000000;
+    border-radius: 10px;
+}
 
 .produtos li:hover {
-    border-color: ;
+    border-color: #c78c19;
 }
 
 .produtos li:active {
-    border-color: rgb(141, 85, 12);
+    border-color: #c78c19;
 }
 
 .produtos li:hover h2 {
-    font-size: 34pxm;
+    font-size: 34px;
+}
+
+.produto-descricao {
+    font-size: 18px;
+}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url("img/bg.jpg");
+    padding: 40px 0;
+}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin:  20px 0 0;
 }
